# noteMaker

./: README.md
noteMakerSource/: CMakeLists.txt  main.cpp
noteMakerSource/noteMaker/: CMakeLists.txt  GuitarShapeContainer.cpp  GuitarShapeContainer.h  gtarJSONParser.cpp  gtarJSONParser.h  main.cpp  notemaker.cpp  notemaker.h  notemaker.qrc  notemaker.ui
